--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,3 +60,20 @@ h1 {
   height: 400px;
   border-radius: 5px !important;
 }
+
+input {
+  box-shadow: none !important;
+  margin-top: 10px !important;
+  border: 1px solid #000000 !important;
+}
+
+h2 {
+  font-size: 30px !important;
+  padding: 10px;
+  font-weight: bold !important;
+  text-align: center !important;
+}
+
+.dropdown-toggle {
+  border: 0px black solid !important;
+}
