--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,10 +61,15 @@ h1 {
   border-radius: 5px !important;
 }
 
-input {
+input,
+select,
+.ant-picker {
   box-shadow: none !important;
   margin-top: 10px !important;
   border: 1px solid #000000 !important;
+  width: 100% !important;
+  border-radius: 5px !important;
+  height: 35px !important;
 }
 
 h2 {
@@ -76,4 +81,8 @@ h2 {
 
 .dropdown-toggle {
   border: 0px black solid !important;
+}
+
+.ant-picker-input input {
+  border: none !important;
 }
